--- a/backend/env.example
+++ b/backend/env.example
@@ -2,12 +2,14 @@
 PORT=3000
 NODE_ENV=development
 
-# Supabase Configuration
-SUPABASE_URL=your_supabase_project_url
+# Supabase Configuration (REQUIRED)
+SUPABASE_URL=https://your-project-ref.supabase.co
 SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
-# Database Configuration (if using direct PostgreSQL connection)
+# Direct PostgreSQL Configuration (OPTIONAL - only if you want direct DB access)
+# Set USE_DIRECT_DB=true to enable direct PostgreSQL connection
+USE_DIRECT_DB=false
 DATABASE_URL=postgresql://username:password@host:port/database?sslmode=require
 
 # Security
