--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_CLOUDINARY_CLOUD_NAME="daznao474"
 VITE_CLOUDINARY_UPLOAD_PRESET="Voice of Bharat"
 VITE_CLOUDINARY_API_KEY="135168871532562"
 CLOUDINARY_API_SECRET="L9wPlrJ3Nj8cyETSbhVVjTsnk6A"
+VITE_API_BASE_URL=https://voice-of-bharat-api.onrender.com/api
