Remove video type badges from latest news section

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_CLOUDINARY_UPLOAD_PRESET="Voice of Bharat"
 VITE_CLOUDINARY_API_KEY="135168871532562"
 CLOUDINARY_API_SECRET="L9wPlrJ3Nj8cyETSbhVVjTsnk6A"
 VITE_API_BASE_URL=https://voice-of-bharat-api.onrender.com/api
+VITE_SHORT_URL_BASE=https://voiceofbharat.live
