--- a/backend/env.example
+++ b/backend/env.example
@@ -18,4 +18,8 @@ CORS_ORIGIN=http://localhost:5173
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100 
+RATE_LIMIT_MAX_REQUESTS=100
+
+# URL Shortening Configuration
+SHORT_URL_BASE=https://voiceofbharat.live
+FRONTEND_URL=https://voiceofbharat.live 
