--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@supabase/supabase-js": "^2.50.0",
+    "@supabase/supabase-js": "^2.50.2",
     "@tanstack/react-query": "^5.56.2",
     "@types/uuid": "^10.0.0",
     "@use-gesture/react": "^10.3.1",
@@ -54,6 +54,7 @@
     "http-proxy-middleware": "^3.0.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "mongoose": "^8.16.1",
     "next-themes": "^0.3.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
@@ -64,8 +65,10 @@
     "react-quill-new": "^3.4.6",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "react-share": "^5.2.2",
     "recharts": "^2.12.7",
     "sib-api-v3-sdk": "^8.5.0",
+    "slugify": "^1.6.6",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -82,6 +85,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
